--- a/templates/actions/set/SetSets.html
+++ b/templates/actions/set/SetSets.html
@@ -6,7 +6,7 @@
     }
     .tfo-sets-table th:nth-child(2),
     .tfo-sets-table th:nth-child(3) {
-        width: 15px; /* Задаем ширину для второго, третьего и четвертого столбцов */
+        width: 15px; 
     }
 </style>
 
