--- a/templates/actions/set/SetEdit.html
+++ b/templates/actions/set/SetEdit.html
@@ -143,7 +143,7 @@
     (function($) {
         $.tilesfoSetEdit = {
             setId: null,
-            form: null,
+            formUpload: null,
             menu: null,
             block: null,
             formEdit: null,
